# pulsar-rs

./: Cargo.toml  README.md
demos/tokio/: Cargo.toml
demos/tokio/src/: full.rs
pulsar-binary-protocol-spec/: Cargo.toml  README.md  build.rs
pulsar-binary-protocol-spec/src/: broker_service_url.rs  command.rs  lib.rs
pulsar-binary-protocol-spec/src/client_channel/: handler_channel_storage.rs  mod.rs
pulsar-binary-protocol-spec/src/client_channel_messages/: consumer_send_handler_channel_message.rs  handler_reply_consumer_channel_message.rs  handler_reply_producer_channel_message.rs  handler_reply_session_channel_message.rs  mod.rs  producer_send_handler_channel_message.rs  session_send_handler_channel_message.rs
pulsar-binary-protocol-spec/src/client_half_requests/: consumer_flow_half_request.rs  consumer_redeliver_unacknowledged_messages_half_request.rs  macro_make_x_half_request_error.rs  mod.rs
pulsar-binary-protocol-spec/src/client_handler/: errors.rs  handle_ack_response.rs  handle_connected.rs  handle_error.rs  handle_message.rs  handle_ping.rs  handle_pong.rs  handle_producer_success.rs  handle_send_error.rs  handle_send_receipt.rs  handle_success.rs  mod.rs  on_responded.rs  pending_messages.rs  pending_requests.rs  pending_sequences.rs
pulsar-binary-protocol-spec/src/client_responds/: connect_respond.rs  consumer_ack_respond.rs  macro_make_x_respond_error.rs  mod.rs  producer_send_respond.rs  session_create_consumer_respond.rs  session_create_producer_respond.rs
pulsar-binary-protocol-spec/src/commands/: ack_command.rs  ack_response_command.rs  connect_command.rs  connected_command.rs  error_command.rs  flow_command.rs  message_command.rs  mod.rs  ping_command.rs  pong_command.rs  producer_command.rs  producer_success_command.rs  redeliver_unacknowledged_messages.rs  send_command.rs  send_error_command.rs  send_receipt_command.rs  subscribe_command.rs  success_command.rs
pulsar-binary-protocol-spec/src/compression/: lz4.rs  mod.rs  zlib.rs
pulsar-binary-protocol-spec/src/frame/: mod.rs  parser.rs  renderer.rs  tests.rs
pulsar-binary-protocol-spec/src/protos/: mod.rs  utils.rs
pulsar-binary-protocol-spec/src/protos/protobuf/: PulsarApi.rs  mod.rs
pulsar-binary-protocol-spec/src/types/: ack_type.rs  ack_validation_error.rs  compression_type.rs  consumer_id.rs  macro_make_x_id_builder_and_x_id.rs  message_id_data.rs  message_metadata.rs  message_properties.rs  mod.rs  producer_id.rs  producer_name.rs  protocol_version.rs  request_id.rs  sequence_id.rs  server_error.rs  single_message_metadata.rs  subscribe_type.rs
pulsar-client/: Cargo.toml  README.md
pulsar-client/src/: client.rs  connection.rs  futures_io.rs  lib.rs  tokio02_io.rs  tokio_io.rs
pulsar-client/src/consumer/: get_message.rs  mod.rs  raw_ack.rs  raw_flow.rs  raw_redeliver_unacknowledged_messages.rs
pulsar-client/src/handler/: handle_broker_pong.rs  handle_broker_push_message.rs  handle_consumer_ack.rs  handle_consumer_get_message.rs  handle_producer_send.rs  handle_session_create_consumer.rs  handle_session_create_producer.rs  mod.rs
pulsar-client/src/producer/: mod.rs  raw_send.rs
pulsar-client/src/session/: mod.rs  raw_create_consumer.rs  raw_create_producer.rs
