[package]
name = "pulsar-binary-protocol-spec"
version = "0.0.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Pulsar binary protocol specification"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/pulsar-rs"
homepage = "https://github.com/bk-rs/pulsar-rs"
documentation = "https://docs.rs/pulsar-binary-protocol-spec"
keywords = []
categories = []
readme = "README.md"

# Build PulsarApi.proto manually
build = false

[features]
default = ["with-asynchronous"]

with-asynchronous = ["futures-channel", "async-channel"]
with-compression-lz4 = ["lz4"]
with-compression-zlib = ["flate2"]
with-hacking-commands = []

[dependencies]
protobuf = { version = "2.22", default-features = false }
crc32c = { version = "0.6", default-features = false, features = [] }

chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = { version = "1.0", default-features = false, features = [] }
url = { version = "2.2", default-features = false, features = [] }

futures-channel = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
async-channel = { version = "1.5", default-features = false, features = [], optional = true }

seq-macro = { version = "0.2", default-features = false, features = [] }
paste = { version = "1.0", default-features = false, features = [] }

lz4 = { version = "1.23", default-features = false, features = [], optional = true }
flate2 = { version = "1.0", default-features = false, features = ["zlib"], optional = true }

[dev-dependencies]
test-case = "1.1"

[build-dependencies]
protoc-rust = { version = "2.22" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
